After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 678238 - Segfault in meta_plugin_manager_new on mutter-3.5.2 stand-alone session.
Segfault in meta_plugin_manager_new on mutter-3.5.2 stand-alone session.
Status: RESOLVED FIXED
Product: mutter
Classification: Core
Component: general
3.5.x
Other Linux
: Normal critical
: ---
Assigned To: mutter-maint
mutter-maint
Depends on:
Blocks:
 
 
Reported: 2012-06-17 04:09 UTC by Hirotaka Maruyama
Modified: 2012-06-25 17:58 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
mutter: Use the default plugin by default (671 bytes, patch)
2012-06-18 05:08 UTC, Jasper St. Pierre (not reading bugmail)
committed Details | Review
meta-plugin-manager: Guard against a NULL start vfunc (1.13 KB, patch)
2012-06-18 05:09 UTC, Jasper St. Pierre (not reading bugmail)
committed Details | Review

Description Hirotaka Maruyama 2012-06-17 04:09:05 UTC
Hi,

After updating mutter to 3.5.2 from 3.4.2, then I've experienced such segfault on "stand-alone" mutter session (means "without gnome-shell")...

Now gdb said this:
---------------------------------------------------------------------------------
GNU gdb (Ubuntu/Linaro 7.4-2012.04-0ubuntu2) 7.4-2012.04
Copyright (C) 2012 Free Software Foundation, Inc.
License GPLv3+: GNU GPL version 3 or later <http://gnu.org/licenses/gpl.html>
This is free software: you are free to change and redistribute it.
There is NO WARRANTY, to the extent permitted by law.  Type "show copying"
and "show warranty" for details.
This GDB was configured as "x86_64-linux-gnu".
For bug reporting instructions, please see:
<http://bugs.launchpad.net/gdb-linaro/>...
Reading symbols from /usr/bin/mutter...Reading symbols from /usr/lib/debug/usr/bin/mutter...done.
done.
(gdb) set args --replace
(gdb) r
Starting program: /usr/bin/mutter --replace
[Thread debugging using libthread_db enabled]
Using host libthread_db library "/lib/x86_64-linux-gnu/libthread_db.so.1".
[New Thread 0x7fffea8d2700 (LWP 3274)]
[New Thread 0x7fffea0d1700 (LWP 3275)]

Program received signal SIGSEGV, Segmentation fault.
meta_plugin_manager_new (screen=0x6151c0)
    at compositor/meta-plugin-manager.c:97
97	  META_PLUGIN_GET_CLASS (plugin)->start (plugin);
(gdb) 
---------------------------------------------------------------------------------

And basically gnome-shell 3.5.2 seems to work well without any segfault like that. Now I could confirm that once I've rollbacked it to 3.4.2, this issue had gone (Yeah I also rollbacked gnome-shell to 3.4.2 as well in same time...). Anyway after I've got this segfault, soon all of the window-frames were gone and never came back. I only had a choice to call metacity via "metacity --replace" to start gnome fallback session.

Any ideas?

Best Regards.
Comment 1 Jasper St. Pierre (not reading bugmail) 2012-06-18 05:08:59 UTC
Created attachment 216634 [details] [review]
mutter: Use the default plugin by default
Comment 2 Jasper St. Pierre (not reading bugmail) 2012-06-18 05:09:04 UTC
Created attachment 216635 [details] [review]
meta-plugin-manager: Guard against a NULL start vfunc

The default plugin has no such vfunc.
Comment 3 Hirotaka Maruyama 2012-06-18 13:23:14 UTC
Hi Jasper,

Thanks for your quick reply and 2 patches!! :)

Now I've just confirmed those patches could solve this issue completely...
Thanks again so much!

Best Regards.
Comment 4 drago01 2012-06-25 17:57:22 UTC
Review of attachment 216634 [details] [review]:

LG.
Comment 5 drago01 2012-06-25 17:57:37 UTC
Review of attachment 216635 [details] [review]:

LG.
Comment 6 Jasper St. Pierre (not reading bugmail) 2012-06-25 17:58:25 UTC
Attachment 216634 [details] pushed as 1478510 - mutter: Use the default plugin by default
Attachment 216635 [details] pushed as f5e4822 - meta-plugin-manager: Guard against a NULL start vfunc