mutter: Use the default plugin by default

https://bugzilla.gnome.org/show_bug.cgi?id=678238